Valid garbage collection implementation.

--- a/src/embed_tests/Python.EmbeddingTest.csproj
+++ b/src/embed_tests/Python.EmbeddingTest.csproj
@@ -106,6 +106,7 @@
     <Compile Include="TestPyWith.cs" />
     <Compile Include="TestRuntime.cs" />
     <Compile Include="TestPyScope.cs" />
+    <Compile Include="TestFinalizer.cs" />
     <Compile Include="TestsSuite.cs" />
   </ItemGroup>
   <ItemGroup>
