Stability testing suite.

--- a/.travis.yml
+++ b/.travis.yml
@@ -97,7 +97,7 @@ install:
 
 script:
   - python -m pytest
-  - mono $NUNIT_PATH src/embed_tests/bin/Python.EmbeddingTest.dll
+  - mono $NUNIT_PATH src/embed_tests/bin/Python.EmbeddingTest.exe
   - if [[ $BUILD_OPTS == --xplat ]]; then dotnet src/embed_tests/bin/netcoreapp2.0_publish/Python.EmbeddingTest.dll; fi
 
 after_script:
