--- a/src/embed_tests/packages.config
+++ b/src/embed_tests/packages.config
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NUnit" version="3.8.1" targetFramework="net40" />
+  <package id="NUnitLite" version="3.8.1" targetFramework="net40" />
   <package id="NUnit.ConsoleRunner" version="3.7.0" targetFramework="net40" />
 </packages>
