Small fixes for python tests under netcore 2.0. Improvements to tests pack for .netcore 2.0.

--- a/src/console/Console.15.csproj
+++ b/src/console/Console.15.csproj
@@ -85,6 +85,11 @@
   <ItemGroup>
     <ProjectReference Include="..\runtime\Python.Runtime.15.csproj" />
   </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
+    <PackageReference Include="System.Drawing.Primitives">
+      <Version>4.3.0</Version>
+    </PackageReference>
+  </ItemGroup>
 
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 
